# dataclean

./: README.md  pyproject.toml
data/: customers.csv  orders.csv  regions.csv  salespeople.csv  transactions.csv
dataclean/: __init__.py  aggregator.py  cleaner.py  commission.py  fiscal.py  merger.py  pipeline.py  reader.py  reporter.py  validators.py
tests/: test_aggregator.py  test_cleaner.py  test_commission.py  test_fiscal.py  test_pipeline.py  test_reader.py  test_reporter.py  test_validators.py
