[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataclean"
version = "0.2.0"
description = "CSV data pipeline for customer order processing and reporting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["csv", "data-pipeline", "pandas", "etl"]
dependencies = ["pandas>=2.0"]

[tool.setuptools.packages.find]
include = ["dataclean*"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
