[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataclean"
version = "0.3.0"
description = "Sales commission data pipeline with tiered rate calculations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["commission", "data-pipeline", "pandas", "etl"]
dependencies = ["pandas>=2.0"]

[tool.setuptools.packages.find]
include = ["dataclean*"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
